force-app/main/default/objects/Attendance__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <formula>IF(
    ISBLANK(CreatedDate), 
    null, 
    TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &apos;-&apos; &amp;
    LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &apos;0&apos;) &amp; &apos;-&apos; &amp;
    LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &apos;0&apos;) &amp; &apos;T&apos; &amp;
    LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate))), 2, &apos;0&apos;) &amp; &apos;:&apos; &amp;
    LPAD(TEXT(MINUTE(TIMEVALUE(CreatedDate))), 2, &apos;0&apos;) &amp; &apos;:&apos; &amp;
    LPAD(TEXT(SECOND(TIMEVALUE(CreatedDate))), 2, &apos;0&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTime</label>
    <type>Text</type>
</CustomField>