force-app/main/default/objects/Attendance__c/fields/EmptyString__c.field-meta.xml
<CustomField>
    <fullName>EmptyString__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmptyString</label>
    <type>Text</type>
</CustomField>