force-app/main/default/objects/Attendance__c/fields/Parent_ID_Config__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Config__c</fullName>
    <formula>CASESAFEID(User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ID Config</label>
    <type>Text</type>
</CustomField>