force-app/main/default/objects/Attendance__c/fields/Punch_Category__c.field-meta.xml
<CustomField>
    <fullName>Punch_Category__c</fullName>
    <label>Punch Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traveling to Site</fullName>
            </value>
            <value>
                <fullName>Working from Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>