force-app/main/default/objects/Attendance__c/fields/Punch_In_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Punch_In_Longitude__c</fullName>
    <label>Punch In Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>