force-app/main/default/objects/Attendance__c/fields/Punch_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Punch_In_Time__c</fullName>
    <label>Punch In Time</label>
    <type>DateTime</type>
</CustomField>