force-app/main/default/objects/Attendance__c/fields/Punch_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Punch_Out_Time__c</fullName>
    <label>Punch Out Time</label>
    <type>DateTime</type>
</CustomField>