force-app/main/default/objects/Attendance__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>