force-app/main/default/objects/Attendance__c/fields/TodayDate__c.field-meta.xml
<CustomField>
    <fullName>TodayDate__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TodayDate</label>
    <type>Date</type>
</CustomField>