force-app/main/default/objects/Attendance__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <formula>$User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserEmail</label>
    <type>Text</type>
</CustomField>